# repack

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  VERSION.py  constants.py  cutils.c  pyproject.toml  repack.py  requirements.txt  setup.py  utils.py
demo/: repack_HCN.cfg  repack_TiO.cfg  wget_exomol_hcn.txt
repack/: VERSION.py  __init__.py  __main__.py  constants.py  cutils.c  pack.py  repack.py  utils.py  version.py
repack/constants/: __init__.py  constants.py  consts.py
repack/utils/: __init__.py  cutils.c  utilities.py
tests/: 14N-1H3__MockBYTe.pf  14N-1H3__MockBYTe.states.bz2  14N-1H3__MockBYTe__00100-00200.trans.bz2  14N-1H3__MockBYTe__00200-00300.trans.bz2  15N-1H3__MockBYTe-15.pf  15N-1H3__MockBYTe-15.states.bz2  15N-1H3__MockBYTe-15__00100-00200.trans.bz2  15N-1H3__MockBYTe-15__00200-00300.trans.bz2  exomol_repack_missing1.cfg  exomol_repack_missing2.cfg  exomol_repack_single.cfg  exomol_repack_single_chunks.cfg  exomol_repack_single_unzip.cfg  exomol_repack_two_files.cfg  exomol_repack_two_isotopes.cfg  exomol_repack_two_two.cfg  exomol_sort.cfg  hitemp_repack_single.cfg  hitemp_repack_single_chunks.cfg  hitemp_repack_single_unzip.cfg  hitemp_repack_single_zip.cfg  hitemp_repack_two.cfg  test_exomol.py  test_hitemp.py  test_sorting.py  test_utils.py
