[build-system]
requires = [
    'setuptools>=40.8.0',
    'numpy>=2.0.0',
]
build-backend = "setuptools.build_meta"

[project]
name = "lbl-repack"
description = "A line-transition data compression package"
readme = "README.md"
license = { file = "LICENSE" }

#https://packaging.python.org/en/latest/guides/single-sourcing-package-version/
dynamic = ["version"]

requires-python = ">=3.9"
authors = [
  {name = "Patricio Cubillos", email = "patricio.cubillos@oeaw.ac.at"},
]

dependencies = [
    'numpy>=2.0',
    'scipy>=1.13.0',
]

[project.urls]
"Homepage" = "https://github.com/pcubillos/repack"

#https://setuptools.pypa.io/en/stable/userguide/entry_point.html#console-scripts
[project.scripts]
repack = "repack.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "repack.version.__version__"}

#https://setuptools.pypa.io/en/stable/userguide/package_discovery.html
[tool.setuptools.packages]
find = {namespaces = false}  # Take only folders with a __init__.py file
